# objdump-gui

./: README.md  pyproject.toml  run.sh
.github/workflows/: ci.yml
objdump_gui/: __init__.py  ansi.py  app.py  highlight.py  introspect.py  main_window.py  options.py  parsers.py  prettyprint.py  runner.py
objdump_gui/widgets/: diff_dialog.py  navigators.py  options_panel.py  output_view.py
packaging/: objdump-gui.desktop
tests/: conftest.py  fixtures.py  test_ansi.py  test_highlight.py  test_introspect.py  test_options.py  test_parsers.py  test_prettyprint.py  test_widgets.py
